--- a/public/css/agency/custom_style.css
+++ b/public/css/agency/custom_style.css
@@ -117,3 +117,7 @@
 .checkbox-inline+.checkbox-inline, .radio-inline+.radio-inline {
   margin-left: 0;
 }
+
+.sweet-alert .sa-icon.sa-success .sa-placeholder {
+  border-radius: 50% !important;
+}
