--- a/public/css/agency/custom_style.css
+++ b/public/css/agency/custom_style.css
@@ -169,11 +169,27 @@ textarea{resize:none;}
 .upload_img{margin-right: 15px;}
 
 
+.manage_data_wrap{
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+}
 
+.data_row{
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
 
+.data_row:last-child{border: 0;}
 
+.data_row > label{font-size: 13px; color: #777; font-weight: 500; display: inline-block; width: 30%;}
+.data_row > span{font-size: 13px; color: #333; font-weight: 600;}
+.action > a{margin-right: 25px; display: inline-block;}
 
+.active_bg{background: #e0fbdf;}
+.not_active_bg{background: #fbf0ed;}
+.pending_bg{background: #fbf8ed;}
 
+.data_row.action{background: #fff;}
 
 
 
