--- a/public/css/agency/custom_style.css
+++ b/public/css/agency/custom_style.css
@@ -86,8 +86,8 @@
 }
 
 .actimages img.img-responsive{
-  height:200px;
-  width:100%;
+  height:160px;
+  width:160px;
 }
 
 
@@ -95,8 +95,8 @@
 
 .img_gallery img
 {
-  height: 200px;
-  width: 100%;
+  height: 160px;
+  width: 160px;
 }
 
 .input_fields_wrap  input[type="file"]{
